# sifter

./: .gitignore  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  TODO.md  default.nix  deny.toml  flake.nix  package.nix
.github/workflows/: ci.yml  hygiene.yml
crates/sifter-cli/: Cargo.toml
crates/sifter-cli/src/: main.rs
crates/sifter-cli/tests/: config_commands.rs  index_commands.rs  version.rs
crates/sifter-codeintel/: Cargo.toml
crates/sifter-codeintel-rust/: Cargo.toml
crates/sifter-codeintel-rust/src/: lib.rs
crates/sifter-codeintel/src/: lib.rs
crates/sifter-core/: Cargo.toml
crates/sifter-core/src/: config.rs
crates/sifter-store/: Cargo.toml
crates/sifter-store/src/: index.rs
docs/specs/: brief.md
