[workspace]
members = ["crates/sifter-cli", "crates/sifter-core"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
authors = ["Jon Ochang"]
repository = "https://github.com/jonochang/sifter"

[workspace.dependencies]
anyhow = "1.0.99"
assert_cmd = "2.0.17"
clap = { version = "4.5.32", features = ["derive"] }
directories = "6.0.0"
predicates = "3.1.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34"
tempfile = "3.21.0"
