[workspace]
members = [
    "crates/sifter-cli",
    "crates/sifter-codeintel",
    "crates/sifter-codeintel-rust",
    "crates/sifter-core",
    "crates/sifter-store",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
authors = ["Jon Ochang"]
repository = "https://github.com/jonochang/sifter"

[workspace.dependencies]
anyhow = "1.0.99"
assert_cmd = "2.0.17"
blake3 = "1.8.2"
clap = { version = "4.5.32", features = ["derive"] }
directories = "6.0.0"
globset = "0.4.16"
ignore = "0.4.24"
predicates = "3.1.3"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34"
tempfile = "3.21.0"
tree-sitter = "0.25.10"
tree-sitter-rust = "0.24.0"
