[package]
name = "sifter-codeintel-rust"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
sifter-codeintel = { path = "../sifter-codeintel" }
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
