[package]
name = "sifter-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
globset.workspace = true
ignore.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sifter-codeintel = { path = "../sifter-codeintel" }
sifter-codeintel-rust = { path = "../sifter-codeintel-rust" }
sifter-core = { path = "../sifter-core" }
